2003-02-16  Kjartan Maraas  <kmaraas@gnome.org>

	* applier.c: Fix a typo in a comment.
	
Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

2002-10-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.1

2002-09-13  Iain <iain@prettypeople.org>

	* preview-file-selection.c (preview_file_selection_update): Update the
	label with the size of the image.
	(preview_file_selection_add_preview): Add a label below the preview.
	
2002-10-01  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0.1

2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0

2002-07-29  jacob berkman  <jacob@ximian.com>

	* applier.c (set_root_pixmap): 
	(make_root_pixmap): fixes for building with gdk 2.0

2002-07-27  Mark McLoughlin  <mark@skynet.ie>

	Add support for rendering the wallpaper on
	a particular physical screen.

	* applier.[ch]:
	(bg_applier_init): init screen and root_window.
	(bg_applier_class_init), (bg_applier_set_prop),
	(bg_applier_get_prop): add "screen" property.
	(bg_applier_new_for_screen): implement.
	(render_wallpaper), (render_to_screen),
	(create_pixmap), (wallpaper_full_cover_p): use the
	screen and root window information.
	(make_root_pixmap): add a GdkScreen arg, actually
	use the display we opened, use the correct root
	window and not the default one
	(set_root_pixmap): add a GdkScreen arg, use the
	default display, use the correct root window.

2002-06-18  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=85224
	* applier.c (render_wallpaper) : clamp to avoid underflow
