@@ -1,3 +1,8 @@
+2003-04-07  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>
+
+	* applier.c (set_root_pixmap): Fixes bogus GC creation.
+	patch from Anders Carlsson <andersca@gnu.org>
+ 
 2003-02-16  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* applier.c: Fix a typo in a comment.
